objects/Monthly_Production__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Monthly Productions</relationshipLabel>
        <relationshipName>Monthly_Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Of_Expected_kWh__c</fullName>
        <formula>IF(Text( Month__c ) = &apos;January&apos;, Total_kWh__c/Contract__r.January__c,
IF(Text( Month__c ) = &apos;February&apos;, Total_kWh__c/Contract__r.February__c,
IF(Text( Month__c ) = &apos;March&apos;, Total_kWh__c/Contract__r.March__c,
IF(Text( Month__c ) = &apos;April&apos;, Total_kWh__c/Contract__r.April__c,
IF(Text( Month__c ) = &apos;May&apos;, Total_kWh__c/Contract__r.May__c,
IF(Text( Month__c ) = &apos;June&apos;, Total_kWh__c/Contract__r.June__c,
IF(Text( Month__c ) = &apos;July&apos;, Total_kWh__c/Contract__r.July__c,
IF(Text( Month__c ) = &apos;August&apos;, Total_kWh__c/Contract__r.August__c,
IF(Text( Month__c ) = &apos;September&apos;, Total_kWh__c/Contract__r.September__c,
IF(Text( Month__c ) = &apos;October&apos;, Total_kWh__c/Contract__r.October__c,
IF(Text( Month__c ) = &apos;November&apos;, Total_kWh__c/Contract__r.November__c,
IF(Text( Month__c ) = &apos;December&apos;, Total_kWh__c/Contract__r.December__c,
null))))))))))))</formula>
        <label>% of Expected kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_kWh__c</fullName>
        <label>Total kWh</label>
        <summarizedField>Production_Update__c.kWh_lifetime__c</summarizedField>
        <summaryForeignKey>Production_Update__c.Monthly_Production__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Monthly Production</label>
    <nameField>
        <displayFormat>MP-{0000000}</displayFormat>
        <label>Monthly Production Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>